done 2 section in profile page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h3 class="p-relative txt-c">Elzero</h3>
       <ul>
         <li>
-          <a href="index.html" class="active d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="#" class="active d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-square-poll-vertical fa-fw"></i>
             <span class="hide-mobile">
               Dashboard
