--- a/pages/settings.html
+++ b/pages/settings.html
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li>
-          <a href="pages/settings.html" class="active d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="#" class="active d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-gear fa-fw"></i>
             <span class="hide-mobile">
               Settings
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li>
-          <a href="pages/profile.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="profile.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-user fa-fw"></i>
             <span class="hide-mobile">
               Profile
@@ -51,31 +51,31 @@
           </a>
         </li>
         <li>
-          <a href="pages/projects.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="projects.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-diagram-project fa-fw"></i>
             <span class="hide-mobile">Projects</span>
           </a>
         </li>
         <li>
-          <a href="pages/courses.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="courses.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-graduation-cap fa-fw"></i>
             <span class="hide-mobile">Courses</span>
           </a>
         </li>
         <li>
-          <a href="pages/friends.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="friends.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-user-group fa-fw"></i>
             <span class="hide-mobile">Friends</span>
           </a>
         </li>
         <li>
-          <a href="pages/files.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="files.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-file fa-fw"></i>
             <span class="hide-mobile">Files</span>
           </a>
         </li>
         <li>
-          <a href="pages/plans.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="plans.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-calendar-check fa-fw"></i>
             <span class="hide-mobile">Plans</span>
           </a>
@@ -147,7 +147,7 @@
                 <span class="mb-5 d-block fw-500">Password</span>
                 <p class="c-gray m-0 fs-13">Last Change On 25/10/2021</p>
               </div>
-              <a href="" class="btn-shape bg-blue trans-hov-fx">Change</a>
+              <a href="#" class="btn-shape bg-blue trans-hov-fx">Change</a>
             </div>
             <div class="between-flex mb-20 pb-30 bb-eee">
               <div>
@@ -164,7 +164,7 @@
                 <span class="mb-5 d-block fw-500">Devices</span>
                 <p class="c-gray m-0 fs-13">Check The Login Devices List</p>
               </div>
-              <a href="" class="btn-shape-black bg-eee fw-500">Devices</a>
+              <a href="#" class="btn-shape-black bg-eee fw-500">Devices</a>
             </div>
           </div>
           <div class="social-info bg-white p-15 rad-10">
