--- a/pages/profile.html
+++ b/pages/profile.html
@@ -192,17 +192,93 @@
             </div>
           </div>
         </div>
-        <div class="skills-activities-container mt-15 d-flex  gap-15">
+        <div class="skills-activities-container mt-15 d-flex  gap-15 column-mobile txt-c-mobile">
           <div class="skills p-15 bg-white rad-10">
             <div class="mb-20">
               <h2 class="mb-5">My Skills</h2>
               <span class="c-gray">Complete Skills List</span>
             </div>
+            <ul class="skills-list">
+              <li>
+                <span class="btn-shape-black bg-eee">HTML</span>
+                <span class="btn-shape-black bg-eee">Pugjs</span>
+                <span class="btn-shape-black bg-eee">HAML</span>
+              </li>
+              <li>
+                <span class="btn-shape-black bg-eee">CSS</span>
+                <span class="btn-shape-black bg-eee">SASS</span>
+                <span class="btn-shape-black bg-eee">Stylus</span>
+              </li>
+              <li>
+                <span class="btn-shape-black bg-eee">JavaScript</span>
+                <span class="btn-shape-black bg-eee">TypeScript</span>
+              </li>
+              <li>
+                <span class="btn-shape-black bg-eee">Vuejs</span>
+                <span class="btn-shape-black bg-eee">Reactjs</span>
+              </li>
+              <li>
+                <span class="btn-shape-black bg-eee">Jest</span>
+                <span class="btn-shape-black bg-eee">Jasmine</span>
+              </li>
+              <li>
+                <span class="btn-shape-black bg-eee">PHP</span>
+                <span class="btn-shape-black bg-eee">Laravel</span>
+              </li>
+              <li>
+                <span class="btn-shape-black bg-eee">Python</span>
+                <span class="btn-shape-black bg-eee">Django</span>
+              </li>
+            </ul>
           </div>
           <div class="last-activities p-15 bg-white rad-10 ">
             <div class="mb-20">
               <h2 class="mb-5">Latest Activities</h2>
               <span class="c-gray">Latest Activities Done By The User</span>
+            </div>
+            <div class="activity-row d-flex align-center mb-20 txt-c-mobile column-mobile">
+              <img src="../images/activity-01.png" alt="" />
+              <div class="grow-1">
+                <h4 class="mb-10 fw-500">Store</h4>
+                <p class="m-0">Bought The Mastering Python Course</p>
+              </div>
+              <div class="time">
+                <span class="d-block mb-10 fw-500">18:10</span>
+                <span class="c-gray">Yesterday</span>
+              </div>
+            </div>
+            <div class="activity-row d-flex align-center mb-20 txt-c-mobile column-mobile">
+              <img src="../images/activity-01.png" alt="" />
+              <div class="grow-1">
+                <h4 class="mb-10 fw-500">Store</h4>
+                <p class="m-0">Bought The Mastering Python Course</p>
+              </div>
+              <div class="time">
+                <span class="d-block mb-10 fw-500">18:10</span>
+                <span class="c-gray">Yesterday</span>
+              </div>
+            </div>
+            <div class="activity-row d-flex align-center mb-20 txt-c-mobile column-mobile">
+              <img src="../images/activity-01.png" alt="" />
+              <div class="grow-1">
+                <h4 class="mb-10 fw-500">Store</h4>
+                <p class="m-0">Bought The Mastering Python Course</p>
+              </div>
+              <div class="time">
+                <span class="d-block mb-10 fw-500">18:10</span>
+                <span class="c-gray">Yesterday</span>
+              </div>
+            </div>
+            <div class="activity-row d-flex align-center mb-20 txt-c-mobile column-mobile">
+              <img src="../images/activity-01.png" alt="" />
+              <div class="grow-1">
+                <h4 class="mb-10 fw-500">Store</h4>
+                <p class="m-0">Bought The Mastering Python Course</p>
+              </div>
+              <div class="time">
+                <span class="d-block mb-10 fw-500">18:10</span>
+                <span class="c-gray">Yesterday</span>
+              </div>
             </div>
           </div>
         </div>
