finish projects page

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard</title>
+  <title>Dashboard | Profile</title>
   <!-- Render All HTML Elements Normally -->
   <link rel="stylesheet" href="../css/normalize.css" />
   <!-- Font Awesome 6.2.0 library -->
@@ -199,33 +199,33 @@
               <span class="c-gray">Complete Skills List</span>
             </div>
             <ul class="skills-list">
-              <li>
+              <li class="d-flex align-center gap-5 flex-wrap">
                 <span class="btn-shape-black bg-eee">HTML</span>
                 <span class="btn-shape-black bg-eee">Pugjs</span>
                 <span class="btn-shape-black bg-eee">HAML</span>
               </li>
-              <li>
+              <li class="d-flex align-center gap-5 flex-wrap">
                 <span class="btn-shape-black bg-eee">CSS</span>
                 <span class="btn-shape-black bg-eee">SASS</span>
                 <span class="btn-shape-black bg-eee">Stylus</span>
               </li>
-              <li>
+              <li class="d-flex align-center gap-5 flex-wrap">
                 <span class="btn-shape-black bg-eee">JavaScript</span>
                 <span class="btn-shape-black bg-eee">TypeScript</span>
               </li>
-              <li>
+              <li class="d-flex align-center gap-5 flex-wrap">
                 <span class="btn-shape-black bg-eee">Vuejs</span>
                 <span class="btn-shape-black bg-eee">Reactjs</span>
               </li>
-              <li>
+              <li class="d-flex align-center gap-5 flex-wrap">
                 <span class="btn-shape-black bg-eee">Jest</span>
                 <span class="btn-shape-black bg-eee">Jasmine</span>
               </li>
-              <li>
+              <li class="d-flex align-center gap-5 flex-wrap">
                 <span class="btn-shape-black bg-eee">PHP</span>
                 <span class="btn-shape-black bg-eee">Laravel</span>
               </li>
-              <li>
+              <li class="d-flex align-center gap-5 flex-wrap">
                 <span class="btn-shape-black bg-eee">Python</span>
                 <span class="btn-shape-black bg-eee">Django</span>
               </li>
@@ -248,10 +248,21 @@
               </div>
             </div>
             <div class="activity-row d-flex align-center mb-20 txt-c-mobile column-mobile">
-              <img src="../images/activity-01.png" alt="" />
+              <img src="../images/activity-02.png" alt="" />
               <div class="grow-1">
-                <h4 class="mb-10 fw-500">Store</h4>
-                <p class="m-0">Bought The Mastering Python Course</p>
+                <h4 class="mb-10 fw-500">Academy</h4>
+                <p class="m-0">Got The PHP Certificate</p>
+              </div>
+              <div class="time">
+                <span class="d-block mb-10 fw-500">18:10</span>
+                <span class="c-gray">Yesterday</span>
+              </div>
+            </div>
+            <div class="activity-row d-flex align-center mb-20 txt-c-mobile column-mobile">
+              <img src="../images/activity-03.png" alt="" />
+              <div class="grow-1">
+                <h4 class="mb-10 fw-500">Badges</h4>
+                <p class="m-0">Unlocked The 10 skills Badge</p>
               </div>
               <div class="time">
                 <span class="d-block mb-10 fw-500">18:10</span>
@@ -262,18 +273,7 @@
               <img src="../images/activity-01.png" alt="" />
               <div class="grow-1">
                 <h4 class="mb-10 fw-500">Store</h4>
-                <p class="m-0">Bought The Mastering Python Course</p>
-              </div>
-              <div class="time">
-                <span class="d-block mb-10 fw-500">18:10</span>
-                <span class="c-gray">Yesterday</span>
-              </div>
-            </div>
-            <div class="activity-row d-flex align-center mb-20 txt-c-mobile column-mobile">
-              <img src="../images/activity-01.png" alt="" />
-              <div class="grow-1">
-                <h4 class="mb-10 fw-500">Store</h4>
-                <p class="m-0">Bought The Mastering Python Course</p>
+                <p class="m-0">Bought The Typescript Course</p>
               </div>
               <div class="time">
                 <span class="d-block mb-10 fw-500">18:10</span>
