--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard</title>
+  <title>Dashboard | Settings</title>
   <!-- Render All HTML Elements Normally -->
   <link rel="stylesheet" href="../css/normalize.css" />
   <!-- Font Awesome 6.2.0 library -->
