finish courses page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -43,7 +43,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="active d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="profile.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-user fa-fw"></i>
             <span class="hide-mobile">
               Profile
@@ -51,7 +51,7 @@
           </a>
         </li>
         <li>
-          <a href="projects.html" class="d-flex align-center rad-6 c-black p-8 fs-14">
+          <a href="#" class="active d-flex align-center rad-6 c-black p-8 fs-14">
             <i class="fa-solid fa-diagram-project fa-fw"></i>
             <span class="hide-mobile">Projects</span>
           </a>
